# spd-habit-tracker

./: .env_docker  README.md  docker-compose.yml  mcp_rag_readme.md
api/: Dockerfile  main.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: dc7ec8df31f7_added_user_info.py  ec989f90d2ca_initial_tables.py  ff2e4f4e6c14_add_tasks_table.py
api/config/: config_setting.py  database_config.py  rag_config.py  security.py
api/dependency/: auth.py
api/enums/: users_opt.py
api/model/: __init__.py  base_model.py  habit.py  log.py  task.py  user.py
api/model/schema/: habit_schema.py  log_schema.py  task_schema.py  user_schema.py
api/protocol/: agent_service.py
api/repository/: habit_repo.py  log_repo.py  task_repo.py  user_repo.py
api/routes/: auth_route.py  chat_route.py  habit_route.py  log_route.py  mcp_route.py  task_route.py  user_route.py
api/service/: rag_service.py
api/utils/: security.py
ui/: Dockerfile  main.py  pyproject.toml
ui/chat/: sidebar_chat.py
ui/client/: api_client.py
ui/config/: app_config.py
ui/views/: dashboard.py  habits.py  home.py  login.py  tasks.py  tracker.py
