[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.0",
    "greenlet>=3.4.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "supabase>=2.28.3",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 120

# Enable specific checks (E: pycodestyle, F: Pyflakes, I: isort for import sorting)
lint.select = ["E", "F", "I"]

# Ignore specific rules if needed (empty for now)
lint.ignore = []

[tool.ruff.format]
# Use double quotes for strings (standard Python convention)
quote-style = "double"
