[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "chromadb>=1.5.9",
    "fastapi>=0.136.0",
    "fastmcp>=3.3.1",
    "google-genai>=2.8.0",
    "greenlet>=3.4.0",
    "langchain-community>=0.4.2",
    "mcp>=1.2.0",
    "ollama>=0.6.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "sqlalchemy>=2.0.49",
    "supabase>=2.28.3",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 120

# Enable specific checks (E: pycodestyle, F: Pyflakes, I: isort for import sorting)
lint.select = ["E", "F", "I"]

# Ignore specific rules if needed (empty for now)
lint.ignore = []

[tool.ruff.format]
# Use double quotes for strings (standard Python convention)
quote-style = "double"
